Fixing hebrew align problem

--- a/files/css/interface_rtl.css
+++ b/files/css/interface_rtl.css
@@ -57,3 +57,6 @@
 #turtleHeaderLogin{
     direction: rtl;
 }
+#accorPlusNav{
+    float : right;
+}
